# cpp_design_patterns

./: CMakeLists.txt  README.md  diary.txt  main.cpp  main_definitions.hpp  run.sh
inc/OpenClosedPrinciple/: Circle.hpp  README.md  Rectangle.hpp  Shape.hpp
inc/SingleResponsibilityPrinciple/: Journal.hpp  PersistenceManager.h  PersistenceManager.hpp  README.md
src/OpenClosedPrinciple/: Circle.cpp  Rectangle.cpp
src/SingleResponsibilityPrinciple/: Journal.cpp  PersistenceManager.cpp
